# images

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  TRTools:v4.0.2  archived_images.txt  images.toml  pylintrc  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sonar-project.properties
.github/workflows/: archive_images.yaml  changed.yaml  deploy.yaml  deploy_config.yaml  deploy_container.yaml  deploy_dev.yaml  depot.yaml  get_expected_tags.yaml  get_version.py  image_statistics.yaml  images-toml-changed.yaml  lint.yaml  prep_config.py  prep_matrix.py  revamp.yaml  revamp_dev.yaml  test.yaml  toml-changed.yaml
images/aspera/: Dockerfile  README.md
images/basespace/: Dockerfile
images/bcftools/: Dockerfile
images/bcftools_120/: Dockerfile
images/bcftools_121/: Dockerfile
images/bedtools/: Dockerfile
scripts/: ExpansionHunter_v5_Dockerfile  Image.py  archive_helpers.py  archive_images.py  copy_gatk_nightly_snapshot_2026-03-01.sh  get_image_statistics.py  move-bedtools:v2.26.0.sh  move-bedtools:v2.30.0.sh  move-cpg-pipes-1.0.sh  move-hap.py:v0.3.9.sh  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/common/: image_logs_helpers.py  image_repository_helpers.py
scripts/image_statistics/: get_data.py  observablehq.config.js  package-lock.json  package.json
scripts/image_statistics/src/: index.md
scripts/src/: archive_helpers.py
scripts/src/scripts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trtools_nonlinear_sum/: Dockerfile
(+138 files in other folders)
